# Vibrant

./: .gitignore  Cargo.toml  README.md  com.felipekinoshita.Vibrant.json  io.github.fkinoshita.Gradients.json  io.github.fkinoshita.Vibrant.json  meson.build
data/: com.felipekinoshita.Vibrant.desktop.in  com.felipekinoshita.Vibrant.gschema.xml  com.felipekinoshita.Vibrant.metainfo.xml.in  io.github.fkinoshita.Gradients.appdata.xml.in  io.github.fkinoshita.Gradients.desktop.in  io.github.fkinoshita.Gradients.gschema.xml  io.github.fkinoshita.Vibrant.appdata.xml.in  io.github.fkinoshita.Vibrant.desktop.in  io.github.fkinoshita.Vibrant.gschema.xml  io.github.fkinoshita.Vibrant.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs.in  gradients.gresource.xml  main.rs  meson.build  style.css  vibrant.gresource.xml  window.rs  window.ui
